[package]
name = "io-context"
version = "0.2.0"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
description = """
A context that carries a deadline, cancelation signals and request scoped values
across API boundaries and between processes.
"""
documentation = "https://docs.rs/io-context"
repository = "https://github.com/Thomasdezeeuw/io-context"
readme = "README.md"
keywords = ["context", "io", "request", "server"]
categories = ["network-programming", "web-programming", "concurrency"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Thomasdezeeuw/io-context" }
appveyor = { repository = "Thomasdezeeuw/io-context", service = "github" }

[features]
default = []
context-future = ["futures"]

[dependencies]
futures = { version = "0.1", optional = true }
