[package]
name = "io-context-hyper-example"
version = "0.1.0"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
publish = false
description = """
An example using the io-context crate with the futures crate.
"""
license = "MIT/Apache-2.0"

[dependencies]
io-context = { path = "../.." }
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
